--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "eslint --fix . bin --ignore public node_modules",
     "pretest": "npm run lint",
     "test": "npm run test:unit && npm run test:integration && npm run test:e2e",
-    "test:michal": "npm run test:unit && npm run test:integration --reporter=jest-html-reporters --reporter=jest-junit",
+    "test:michal": "npm run test:unit && npm run test:integration",
     "test:e2e": "node test/run-e2e-test.js",
     "test:e2e:dev": "node test/run-e2e-test.js --dev",
     "test:integration": "jest test/integration",
